# open-env-data-clean

./: README.md  __init__.py  client.py  inference.py  local_smoke.py  models.py  openenv.yaml  pyproject.toml  test_local.py
openenv_data_clean_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: Dockerfile  __init__.py  app.py  data_clean_env_environment.py
tests/: test_environment.py
